styles/style.css
/* ... */
.link {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 10px;
}

.link > i {
  font-size: 30px;
}

.nav-link a {
  color: var(--primaryColor);
  font-size: var(--bodyFontDesktop);
}

.nav-link a:hover {
  color: #666666;
}

.menu-toggle {
  display: none;
}

/* MAIN */
section {
  padding: 45px 0px;
  margin: 5px;
}

.section-title {
  padding-left: clamp(1em, 2vw, 2em);
  color: var(--primaryColor);
  font-size: 32px;
  font-weight: 700;
  margin-bottom: 32px;
}

/* ABOUT */
.about {
  height: auto;
  border-radius: 25px;
  margin: 5px;
  padding-left: clamp(1em, 2vw, 2em);
  padding-right: clamp(1em, 2vw, 2em);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-image: url("../images/about-background.png");
  background-size: cover;
}
.self-introduction {
  color: var(--secondaryColor);
  font-size: var(--bodyFontDesktop);
  margin-top: 0;
  padding: 0 30%;
}

.my-name {
  color: var(--primaryColor);
  font-size: 120px;
  font-weight: 700;
  line-height: 115px;
}

.job-title {
  font-size: 65px;
  color: #1e50dd;
  font-weight: 500;
  line-height: 85px;
}

.about p:nth-child(4) {
  margin-top: 1em;
}

.about-section-button {
  display: block;
  width: 266px;
  height: 66px;
  color: var(--primaryColor);
  text-align: center;
  line-height: 60px;
  border: 3px solid var(--secondaryColor);
  border-radius: 10px;
  margin-top: 36px;
  font-size: var(--bodyFontDesktop);
}

.about-section-button:hover {
  color: var(--tertiaryColor);
  background-color: var(--secondaryColor);
}

.icon-wrapper {
  margin-top: 30px;
  display: flex;
  gap: 50px;
}

.icon-wrapper > a {
  color: var(--primaryColor);
  font-size: 30px;
}

.icon-wrapper > a:hover {
  color: #666666;
}

/* Source: https://codingartistweb.com/2022/01/scroll-down-button-html-css-tutorial/ */
a#scroll-btn {
  position: relative;
  height: 3.3em;
  width: 1.7em;
  border: 2px solid var(--primaryColor);
  margin-top: 30px;
  bottom: 0em;
  border-radius: 3em;
}
a#scroll-btn:before {
  position: absolute;
  content: "";
  margin: auto;
  left: 0;
  right: 0;
  top: 1.2em;
  height: 0.4em;
  width: 0.3em;
  background-color: var(--primaryColor);
  border-radius: 35%;
  animation: move-down 3s infinite;
}
@keyframes move-down {
  0% {
    transform: translateY(0);
  }
  50% {
    transform: translateY(1.25em);
  }
  100% {
    transform: translateY(0);
  }
}
a#scroll-btn:after {
  position: absolute;
  content: "SCROLL DOWN";
  width: 12em;
  left: -3.6em;
  display: block;
  bottom: -2em;
  font-size: 1em;
  color: var(--primaryColor);
  letter-spacing: 3px;
  font-weight: 600;
}

/* WORK */
.project {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 55%;
}

.project-wrapper {
  display: flex;
}

.project-introduction {
  display: flex;
  flex-direction: column;
  align-items: start;
  gap: 1em;
  overflow-y: clip;
  height: 100vh;
  justify-content: center;
  width: 100%;
  padding-left: clamp(1em, 2vw, 2em);
}

.project-title {
  color: var(--primaryColor);
  font-size: min(28px, 2.3vw);
  font-weight: 700;
}

.project-description-and-live-preview-button {
  padding-top: 0;
  padding-right: clamp(1em, 2vw, 2em);
}

.project-description {
  color: var(--primaryColor);
  font-size: min(var(--bodyFontDesktop), 1.4vw);
  padding-top: 0.7em;
}

.live-preview-button {
  padding: 10px 10px;
  color: var(--primaryColor);
  display: block;
  border-radius: 10px;
  text-align: center;
  border: 2px var(--primaryColor) solid;
  font-size: min(14px, 1.1vw);
  margin-top: 18px;
  display: flex;
  align-items: center;
  gap: 5px;
}

.live-preview-button > .material-symbols-outlined {
  font-size: 20px;
}

.live-preview-button:hover {
  background-color: var(--primaryColor);
  color: var(--tertiaryColor);
}

.image-wrapper {
  background-image: url("../images/project-background.webp");
  display: flex;
  align-items: center;
  justify-content: center;
  height: 99vh;
  border-radius: 25px;
  width: 70%;
  padding: 0px 20px;
  position: sticky;
  top: 5px;
}

.image-wrapper :nth-child(2),
.image-wrapper :nth-child(3) {
  display: none;
}

.project-image {
  height: auto;
  width: 100%;
  border-radius: 25px;
}

.project-one,
.project-two,
.project-three {
  display: flex;
  width: 100%;
}

.project-image-tablet {
  display: none;
}

.project-button-wrapper {
  display: flex;
  gap: 25px;
}

.hover-wrapper1,
.hover-wrapper3 {
  display: flex;
  flex-direction: column;
  margin-top: 10px;
  gap: 5px;
  width: 100%;
}
.hover1,
.hover3 {
  padding: 15px;
  background-color: #ececec;
  border-radius: 10px;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: space-between;
}
.hover1 > span,
.hover3 > span {
  font-size: 30px;
}
.hover1:hover,
.hover3:hover {
  background-color: #d1d1d1;
}
.video-tablet {
  display: none;
}

/* Animations */
.fade {
  animation-name: fade;
  animation-duration: 0.7s;
}
.hidden {
  transform: translateX(-100%);
  transition: all 0.7s;
}
.show {
  transform: translateX(0);
}

@keyframes fade {
  from {
    opacity: 0.2;
  }
  to {
    opacity: 1;
  }
}

/* CONTACT */
.contact-wrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 15px;
}
.contact > p,
.contact > div {
  font-size: min(var(--bodyFontDesktop), 1.4vw);
  padding-left: clamp(1em, 2vw, 2em);
  padding-right: clamp(1em, 2vw, 2em);
}
.contact-wrapper div {
  display: flex;
  gap: 15px;
}
.contact-wrapper div a {
  font-size: 30px;
  color: var(--primaryColor);
  display: flex;
  flex-direction: column;
  align-items: center;
}
.contact-wrapper div a:hover {
  color: #666666;
}

/* FOOTER */
footer {
  font-size: var(--bodyFontDesktop);
  background-color: #333333;
  color: var(--tertiaryColor);
  display: flex;
  justify-content: space-between;
  padding-left: 10vw;
  padding-right: 10vw;
  padding-top: 5em;
  padding-bottom: 5em;
}

footer img {
  width: 45px;
  height: 45px;
  margin-top: 13px;
}
/* ... */

